// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MValidationMessage should render correctly when it is in error 1`] = `
<div class="m-validation-message">
  <p name="m--is" class="m-validation-message__error"><svg width="1em" height="1em" class="m-icon m-validation-message__icon">
      <title>Error</title>
      <use aria-hidden="true"></use>
    </svg> <span class="m-validation-message__text">error</span></p>
</div>
`;

exports[`MValidationMessage should render correctly when it is in error 2`] = `
<div class="m-validation-message">
  <p name="m--is" class="m-validation-message__error"><svg width="1em" height="1em" class="m-icon m-validation-message__icon">
      <title>Error</title>
      <use aria-hidden="true"></use>
    </svg> <span class="m-validation-message__text">error</span></p>
</div>
`;

exports[`MValidationMessage should render correctly when it is valid 1`] = `
<div class="m-validation-message">
  <p name="m--is" class="m-validation-message__valid"><svg width="1em" height="1em" class="m-icon m-validation-message__icon">
      <title>Valid</title>
      <use aria-hidden="true"></use>
    </svg> <span class="m-validation-message__text">valid</span></p>
</div>
`;

exports[`MValidationMessage should render error message even if there is a valid message 1`] = `
<div class="m-validation-message">
  <p name="m--is" class="m-validation-message__error"><svg width="1em" height="1em" class="m-icon m-validation-message__icon">
      <title>Error</title>
      <use aria-hidden="true"></use>
    </svg> <span class="m-validation-message__text">error</span></p>
</div>
`;

exports[`MValidationMessage should render helper message when prop is set 1`] = `
<div class="m-validation-message">
  <p name="m--is" class="m-validation-message__helper">help</p>
</div>
`;
